umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_sih3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["Si#u" "H" "H" "H"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms ["Si#u" "H" "H" "H"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms ["Si#u" "H" "H" "H"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms ["Si#u" "H" "H" "H"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single]]}
    :success true
    :tie-breaks []}}
