umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@mn_group_manganese-dioxide.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {:atoms ["Mn#u3" "O#n2" "O#n2"] :bonds [[0 1 :double] [0 2 :double]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {:atoms ["Mn#u3" "O#n2" "O#n2"] :bonds [[0 1 :double] [0 2 :double]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {:atoms ["Mn#n#u" "O#n2" "O#n2"] :bonds [[0 1 :double] [0 2 :double]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {:atoms ["Mn#n#u" "O#n2" "O#n2"] :bonds [[0 1 :double] [0 2 :double]]}
    :success true
    :tie-breaks []}}
