umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@n_group_n2h2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["N#n" "N#n" "H" "H"]
      :bonds [[0 1 :double] [0 2 :single] [1 3 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms ["N#n" "N#n" "H" "H"]
      :bonds [[0 1 :double] [0 2 :single] [1 3 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms ["N#n" "N#n" "H" "H"]
      :bonds [[0 1 :double] [0 2 :single] [1 3 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms ["N#n" "N#n" "H" "H"]
      :bonds [[0 1 :double] [0 2 :single] [1 3 :single]]}
    :success true
    :tie-breaks []}}
