umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@n_group_n2o.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {:atoms ["N#c-#n2" "N#c+" "O#n2"] :bonds [[0 1 :double] [1 2 :double]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {:atoms ["N#c-#n2" "N#c+" "O#n2"] :bonds [[0 1 :double] [1 2 :double]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {:atoms ["N#c-#n2" "N#c+" "O#n2"] :bonds [[0 1 :double] [1 2 :double]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {:atoms ["N#c-#n2" "N#c+" "O#n2"] :bonds [[0 1 :double] [1 2 :double]]}
    :success true
    :tie-breaks []}}
