umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@n_group_nh4+-implicit.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {:output {:atoms ["N#c+#h4"] :bonds []} :success true :tie-breaks []}
  :atom-typing-strict {:output {:atoms ["N#c+#h4"] :bonds []} :success true :tie-breaks []}
  :counts-most-saturated {:output {:atoms ["N#c+#h4"] :bonds []} :success true :tie-breaks []}
  :counts-strict {:output {:atoms ["N#c+#h4"] :bonds []} :success true :tie-breaks []}}
