umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@n_group_nh4+.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["N#c+" "H" "H" "H" "H"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms ["N#c+" "H" "H" "H" "H"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms ["N#c+" "H" "H" "H" "H"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms ["N#c+" "H" "H" "H" "H"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single]]}
    :success true
    :tie-breaks []}}
